fix text visibility

--- a/sass/shop/_products.scss
+++ b/sass/shop/_products.scss
@@ -37,9 +37,11 @@
 						flex: 1 0 100%;
 						color: #ffffff;
 						font-weight: 500;
+						@include prefix( text-shadow, 1px 1px 3px rgba(0,0,0,0.8), o moz webkit );
 
 						a {
 							color: #e6e6e6;
+							@include prefix( text-shadow, 1px 1px 3px rgba(0,0,0,0.8), o moz webkit );
 						}
 					}
 
@@ -49,6 +51,7 @@
 						font-weight: 700;
 						color: #ffffff;
 						@include font-size( 3 );
+						@include prefix( text-shadow, 1px 1px 3px rgba(0,0,0,0.8), o moz webkit );
 					}
 				}
 
